--- a/02-ResponsiveUI/programs-images.html
+++ b/02-ResponsiveUI/programs-images.html
@@ -27,13 +27,13 @@
     <!-- The slideshow -->
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="g01-Uniwersytet-Ekonomiczny-w-Krakowie.jpg" alt="Los Angeles" width="1100" height="500">
+        <img src="g01-Uniwersytet-Ekonomiczny-w-Krakowie.jpg" alt="Los Angeles" width="100%" height="350px">
       </div>
       <div class="carousel-item">
-        <img src="unnamed.jpg" alt="Chicago" width="1100" height="500">
+        <img src="unnamed.jpg" alt="Chicago" width="100%" height="350px">
       </div>
       <div class="carousel-item">
-        <img src="123.png" alt="New York" width="1100" height="500">
+        <img src="123.png" alt="New York" width="100%" height="350px">
       </div>
     </div>
     
